--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,26 +1,55 @@
 .about-detail {
   gap: 100px;
   margin-bottom: 50px;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.7s ease, transform 0.7s ease;
+
+  &.animate__fadeIn {
+    animation: fadeIn 0.7s forwards;
+  }
+  @media (max-width: 768px) {
+    gap: 20px;
+    flex-direction: column;
+  }
+  &:nth-child(2) {
+    flex-direction: column-reverse;
+  }
 }
 
 .about-wrapper {
   margin-top: 50px;
+  @media (max-width: 768px) {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 }
 
 .about-img {
   width: 600px;
   height: auto;
+
+  @media (max-width: 768px) {
+    width: 200px;
+    height: auto;
+  }
 }
 
 .about-heading {
   font-size: 48px;
   font-weight: 200;
   margin-bottom: 20px;
+  @media (max-width: 768px) {
+    font-size: 28px;
+  }
 }
 
 .about-subheading {
   font-size: 20px;
   font-weight: 200;
+  @media (max-width: 768px) {
+    font-size: 16px;
+  }
 }
 
 @keyframes fadeIn {
@@ -31,15 +60,5 @@
   to {
     opacity: 1;
     transform: translateY(0);
-  }
-}
-
-.about-detail {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.7s ease, transform 0.7s ease;
-
-  &.animate__fadeIn {
-    animation: fadeIn 0.7s forwards;
   }
 }
