--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
   z-index: 5;
   position: fixed;
   top: 0;
@@ -14,32 +14,133 @@ header {
       color: black;
     }
   }
-}
 
-.header-nav-list {
-  list-style-type: none;
-  gap: 50px;
-  padding: 0;
-}
-
-.header-logo {
-  width: 200px;
-  height: auto;
-}
-
-.header-wrapper {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-nav-link {
-  a {
-    color: white;
-    font-size: 18px;
+  .header-wrapper {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  &.active a {
-    color: white;
+
+  .hamburger {
+    display: none; // Hidden by default on larger screens
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    z-index: 6;
+
+    .hamburger-bar {
+      width: 100%;
+      height: 3px;
+      background-color: white;
+      position: relative;
+      transition: 0.3s ease;
+
+      &.open {
+        background-color: black;
+
+        &:before,
+        &:after {
+          background-color: black;
+        }
+
+        &:before {
+          transform: rotate(45deg);
+          top: 0;
+        }
+
+        &:after {
+          transform: rotate(-45deg);
+          top: 0;
+        }
+      }
+
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background-color: white;
+        transition: 0.3s ease;
+      }
+
+      &:before {
+        top: -10px;
+      }
+
+      &:after {
+        top: 10px;
+      }
+    }
+  }
+
+  .header-nav {
+    display: flex;
+    align-items: center;
+
+    @media (max-width: 768px) {
+      position: absolute;
+      top: 60px;
+      right: 0;
+      flex-direction: column;
+      background-color: black;
+      width: 100%;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      transform: translateX(100%);
+      transition: transform 0.3s ease;
+      z-index: 5;
+
+      &.open {
+        transform: translateX(0);
+      }
+
+      .header-nav-list {
+        flex-direction: column;
+        gap: 20px;
+      }
+    }
+  }
+
+  .header-nav-list {
+    list-style-type: none;
+    gap: 50px;
+    padding: 0;
+    display: flex;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
+
+  .header-nav-link {
+    a {
+      color: white;
+      font-size: 18px;
+
+      @media (max-width: 768px) {
+        font-size: 24px;
+      }
+    }
+
+    &.active a {
+      color: white;
+    }
+  }
+
+  .header-logo {
+    width: 200px;
+    height: auto;
+  }
+
+  @media (max-width: 768px) {
+    .hamburger {
+      display: flex; // Show hamburger on mobile/tablet
+    }
   }
 }
