--- a/src/components/heroContainer/HeroContainer.scss
+++ b/src/components/heroContainer/HeroContainer.scss
@@ -15,6 +15,9 @@
   max-width: 50%;
   font-weight: 400;
   padding-bottom: 100px;
+  @media (max-width: 768px) {
+    font-size: 56px;
+  }
 }
 
 .hero-overlay {
